syntax = "proto3";

package dg.model;

import "common.proto";

enum SwitcherStatus{
	Switcher_Status_Unknown = 0;
	Switcher_Status_Started = 1;
	Switcher_Status_Stopped = 2;
	Switcher_Status_Paused = 3;
}

enum TaskStatus {
	Task_Status_Unknown = 0;
	Task_Status_Created = 1;
	Task_Status_Processing = 2;
	Task_Status_Finished = 3;
	Task_Status_Deleted = 4;
	Task_Status_Outdate = 5;
	Task_Status_Paused = 6;
	Task_Status_Stopped = 7;
}

enum GroupByDimensions {
	UNKNOWN_DIMENSION = 0;
	ID = 1;
	SENSOR_ID = 2;
	SENSOR_GROUP_ID = 3;
	COLOR_ID = 4;
	TS_MONTH = 5;
	TS_WEEK = 6;
	TS_DAY = 7;
	TS_HOUR = 8;

	BUSINESS_ID = 1024;
	BRAND_ID = 1025;
	SUBBRAND_ID = 1026;
	MODELYEAR_ID = 1027;
	TYPE_ID = 1028;
	PLATE_TEXT = 1029;
	PLATE_COLOR = 1030;
	PLATE_TYPE = 1031;
	SIDE = 1032;
}

message QueryTimeRange {
	int64 TimestampStart = 1;
	int64 TimestampEnd = 2;
}

message QueryTimeSpacialRange {
	int32 RepoId = 1;
	repeated int32 SensorIds = 2;
	repeated QueryTimeRange TimeRanges = 3;
}

message BaseQuery {
	string QueryId = 1; 
	ObjType Type = 2; // not used in sync call
	repeated QueryTimeSpacialRange QueryTimeSpacialRanges = 3;
	repeated int64 Id = 4;

	repeated string columns = 8;
	int32 Offset = 9;
	int32 Limit = 10;
	string SortBy = 11;
    bool SortOrderAsc = 12;
	GroupByDimensions GroupByDimensions = 64;
	DataFmtType OutputFmt = 13;

	Image Img = 16;
	Cutboard Cutboard = 17;
	bytes Feature = 18; // not used yet
}

enum CountDimensions {
	COUNT_DIMENSION_UNKNOWN = 0;
	COUNT_DIMENSION_MONTH = 1;
	COUNT_DIMENSION_DAY = 2;
	COUNT_DIMENSION_HOUR = 3;
	COUNT_DIMENSION_PLATE = 4;
	COUNT_DIMENSION_SENSOR = 5;
}

message DimensionalCountRequest {
	QueryTimeSpacialRange QueryTimeSpacialRange = 1;
	CountDimensions CountDimension = 2;
}

message DimensionalCountResponse{
	map<string,int32> DimensionalCounts = 1;
}

// VehicleCount
message ObjCount {
    int32 Count = 1;
}


